kubernetes/qbittorrent/overlays/movie-2/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qbittorrent-movie-2
  labels:
    app.kubernetes.io/name: qbittorrent
    app.kubernetes.io/part-of: qbittorrent
    app.kubernetes.io/instance: movie-2
